tests/fixtures/valid/strict/strict-common-config-2.yini
    ^ App
    name = "My App Title"
    version = "1.2.3"
    pageSize = 25
    darkTheme = off
    /END
