tests/fixtures/invalid/defectUnterminatedString.yini
^ App
name = "Demo
version = "1.0.0"
